--- a/package.json
+++ b/package.json
@@ -17,9 +17,25 @@
     "url": "https://github.com/lopezhansel/Virtual-Business-Card/issues"
   },
   "homepage": "https://github.com/lopezhansel/Virtual-Business-Card#readme",
+
+
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
-    "mongoose": "^4.2.6"
+    "express-session": "^1.11.3",
+    "mongoose": "^4.1.11",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0"
+  },
+    "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "babel-preset-es2015": "^6.1.18",
+    "gulp-concat": "^2.6.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-uglify": "^1.5.1",
+    "browser-sync": "^2.10.0"
   }
 }
+
