--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "browser-sync": "^2.10.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
-    "babel-preset-es2015": "^6.1.18",
     "gulp-concat": "^2.6.0",
     "gulp-nodemon": "^2.0.4",
-    "gulp-uglify": "^1.5.1",
-    "browser-sync": "^2.10.0"
+    "gulp-plumber": "^1.0.1",
+    "gulp-uglify": "^1.5.1"
   }
 }
