--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^4.1.11",
     "passport": "^0.3.0",
     "passport-github2": "^0.1.9",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "vcards-js": "^2.3.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
