--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "markdown-to-html": "0.0.11"
   }
 }
