--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
+    "connect-multiparty": "^2.0.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "lodash": "^4.3.0",
     "mongoose": "^4.1.11",
     "passport": "^0.3.0",
     "passport-github2": "^0.1.9",
