--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "bugs": {
     "url": "https://github.com/lopezhansel/Virtual-Business-Card/issues"
   },
+  "babel": {
+    "presets": ["es2015", "react"]
+  },
   "homepage": "https://github.com/lopezhansel/Virtual-Business-Card#readme",
   "dependencies": {
     "bcryptjs": "^2.3.0",
@@ -28,7 +31,22 @@
     "passport": "^0.3.0",
     "passport-github2": "^0.1.9",
     "passport-local": "^1.0.0",
-    "vcards-js": "^2.3.1"
+    "vcards-js": "^2.3.1",
+    "alt": "^0.17.8",
+    "async": "^1.5.0",
+    "colors": "^1.1.2",
+    "compression": "^1.6.0",
+    "history": "^1.13.0",
+    "morgan": "^1.6.1",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-router": "^1.0.0",
+    "request": "^2.65.0",
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.3.7",
+    "swig": "^1.4.2",
+    "underscore": "^1.8.3",
+    "xml2js": "^0.4.15"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
@@ -39,6 +57,18 @@
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
     "gulp-uglify": "^1.5.1",
-    "markdown-to-html": "0.0.11"
+    "markdown-to-html": "0.0.11",
+    "babel-core": "^6.1.19",
+    "babel-preset-react": "^6.1.18",
+    "babel-register": "^6.3.13",
+    "babelify": "^7.2.0",
+    "bower": "^1.6.5",
+    "browserify": "^12.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.0"
   }
 }
