--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,12 @@
     "jquery": "^2.1.4",
     "bootstrap": "^3.3.5",
     "magnific-popup": "^1.0.0",
-    "toastr": "^2.1.1"
+    "toastr": "^2.1.1",
+    "angular": "1.4.9",
+    "angular-material": "^1.0.5",
+    "angular-route": "^1.5.0",
+    "angular-resource": "^1.5.0",
+    "lodash": "^4.5.1",
+    "ng-file-upload": "^12.0.1"
   }
 }
