--- a/package.json
+++ b/package.json
@@ -18,27 +18,36 @@
     "url": "https://github.com/lopezhansel/Virtual-Business-Card/issues"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "homepage": "https://github.com/lopezhansel/Virtual-Business-Card#readme",
   "dependencies": {
+    "alt": "^0.17.8",
+    "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-aria": "^1.5.0",
+    "angular-material": "^1.0.6",
+    "angular-resource": "^1.5.0",
+    "angular-route": "^1.5.0",
+    "async": "^1.5.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
+    "colors": "^1.1.2",
+    "compression": "^1.6.0",
     "connect-multiparty": "^2.0.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
-    "lodash": "^4.3.0",
+    "history": "^1.13.0",
+    "lodash": "^4.6.1",
     "mongoose": "^4.1.11",
+    "morgan": "^1.6.1",
+    "ng-file-upload": "^12.0.4",
     "passport": "^0.3.0",
     "passport-github2": "^0.1.9",
     "passport-local": "^1.0.0",
-    "vcards-js": "^2.3.1",
-    "alt": "^0.17.8",
-    "async": "^1.5.0",
-    "colors": "^1.1.2",
-    "compression": "^1.6.0",
-    "history": "^1.13.0",
-    "morgan": "^1.6.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
@@ -47,29 +56,32 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
+    "vcards-js": "^2.3.1",
+    "webpack-stream": "^3.1.0",
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "browser-sync": "^2.10.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-plumber": "^1.0.1",
-    "gulp-uglify": "^1.5.1",
-    "markdown-to-html": "0.0.11",
     "babel-core": "^6.1.19",
+    "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-register": "^6.3.13",
     "babelify": "^7.2.0",
     "bower": "^1.6.5",
+    "browser-sync": "^2.10.0",
     "browserify": "^12.0.1",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "markdown-to-html": "0.0.11",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0"
+    "watchify": "^3.6.0",
+    "webpack": "^1.12.14"
   }
 }
