--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
     "xml2js": "^0.4.15"
   },
   "devDependencies": {
-    "babel-core": "^6.1.19",
-    "babel-preset-es2015": "^6.1.18",
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.1.18",
     "babel-register": "^6.3.13",
     "babelify": "^7.2.0",
@@ -82,6 +83,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.0",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
