--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "markdown-to-html": "0.0.11",
+    "ng-cache-loader": "0.0.15",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.0",
